--- a/embedded/fsk_distance_measure_demo2/DOC/QCOM/腾轩测距.ini
+++ b/embedded/fsk_distance_measure_demo2/DOC/QCOM/腾轩测距.ini
@@ -3,31 +3,31 @@ RunTimes=1000
 DelayTime=1000
 [1]
 Cho=1
-CMD=
+CMD=AA 01 00 00 AB
 Delay=
 HEX=1
 Enter=0
 [2]
 Cho=1
-CMD=
+CMD=AA 02 00 00 AC
 Delay=
 HEX=1
 Enter=0
 [3]
 Cho=1
-CMD=
+CMD=AA 03 00 00 AD
 Delay=
 HEX=1
 Enter=0
 [4]
 Cho=1
-CMD=
+CMD=AA 04 00 00 AE
 Delay=
 HEX=1
 Enter=0
 [5]
 Cho=1
-CMD=
+CMD=AA 05 00 00 AF
 Delay=
 HEX=1
 Enter=0
