--- a/embedded/fsk_distance_measure_demo2/MDK/distance_measure.uvprojx
+++ b/embedded/fsk_distance_measure_demo2/MDK/distance_measure.uvprojx
@@ -2202,7 +2202,7 @@
           <SLE66CMisc></SLE66CMisc>
           <SLE66AMisc></SLE66AMisc>
           <SLE66LinkerMisc></SLE66LinkerMisc>
-          <SFDFile>D:\cccc2020\CODE\workspace\bfsk_8161\embedded\fsk_distance_measure\MDK\HDSC_HC32F46x.SFR</SFDFile>
+          <SFDFile>D:\cccc2020\CODE\workspace\bfsk_8161\embedded\test_axf\MDK\HDSC_HC32F46x.SFR</SFDFile>
           <bCustSvd>1</bCustSvd>
           <UseEnv>0</UseEnv>
           <BinPath></BinPath>
