fsk_distance_measure_demo2: basic working and tested

--- a/embedded/fsk_distance_measure_demo2/DOC/QCOM/腾轩测距.ini
+++ b/embedded/fsk_distance_measure_demo2/DOC/QCOM/腾轩测距.ini
@@ -3,31 +3,31 @@ RunTimes=1000
 DelayTime=1000
 [1]
 Cho=1
-CMD=AA 01 00 00 AB
+CMD=55 5A 03 D1 01 84
 Delay=
 HEX=1
 Enter=0
 [2]
 Cho=1
-CMD=AA 02 00 00 AC
+CMD=55 5A 03 D1 00 83
 Delay=
 HEX=1
 Enter=0
 [3]
 Cho=1
-CMD=AA 03 00 00 AD
+CMD=55 5A 03 D2 01 85
 Delay=
 HEX=1
 Enter=0
 [4]
 Cho=1
-CMD=AA 04 00 00 AE
+CMD=55 5A 02 D3 84
 Delay=
 HEX=1
 Enter=0
 [5]
 Cho=1
-CMD=AA 05 00 00 AF
+CMD=55 5A 04 D4 00 64 EB
 Delay=
 HEX=1
 Enter=0
