--- a/embedded/fsk_distance_measure_demo2/DOC/QCOM/腾轩测距.ini
+++ b/embedded/fsk_distance_measure_demo2/DOC/QCOM/腾轩测距.ini
@@ -2,19 +2,19 @@
 RunTimes=1000
 DelayTime=1000
 [1]
-Cho=1
+Cho=0
 CMD=55 5A 03 D1 01 84
 Delay=
 HEX=1
 Enter=0
 [2]
-Cho=1
+Cho=0
 CMD=55 5A 03 D1 00 83
 Delay=
 HEX=1
 Enter=0
 [3]
-Cho=1
+Cho=0
 CMD=55 5A 03 D2 01 85
 Delay=
 HEX=1
@@ -26,151 +26,151 @@ Delay=
 HEX=1
 Enter=0
 [5]
-Cho=1
-CMD=55 5A 04 D4 00 64 EB
+Cho=0
+CMD=55 5A 04 D4 00 66 ED
 Delay=
 HEX=1
 Enter=0
 [6]
-Cho=1
+Cho=0
 CMD=
 Delay=
 HEX=1
 Enter=0
 [7]
-Cho=1
+Cho=0
 CMD=
 Delay=
 HEX=1
 Enter=0
 [8]
-Cho=1
+Cho=0
 CMD=
 Delay=
 HEX=1
 Enter=0
 [9]
-Cho=1
+Cho=0
 CMD=
 Delay=
 HEX=1
 Enter=0
 [10]
-Cho=1
+Cho=0
 CMD=
 Delay=
 HEX=1
 Enter=0
 [11]
-Cho=1
+Cho=0
 CMD=
 Delay=
 HEX=1
 Enter=0
 [12]
-Cho=1
+Cho=0
 CMD=
 Delay=
 HEX=1
 Enter=0
 [13]
-Cho=1
+Cho=0
 CMD=
 Delay=
 HEX=1
 Enter=0
 [14]
-Cho=1
+Cho=0
 CMD=
 Delay=
 HEX=1
 Enter=0
 [15]
-Cho=1
+Cho=0
 CMD=
 Delay=
 HEX=1
 Enter=0
 [16]
-Cho=1
+Cho=0
 CMD=
 Delay=
 HEX=1
 Enter=0
 [17]
-Cho=1
+Cho=0
 CMD=
 Delay=
 HEX=1
 Enter=0
 [18]
-Cho=1
+Cho=0
 CMD=
 Delay=
 HEX=1
 Enter=0
 [19]
-Cho=1
+Cho=0
 CMD=
 Delay=
 HEX=1
 Enter=0
 [20]
-Cho=1
+Cho=0
 CMD=
 Delay=
 HEX=1
 Enter=0
 [21]
-Cho=1
+Cho=0
 CMD=
 Delay=
 HEX=1
 Enter=0
 [22]
-Cho=1
+Cho=0
 CMD=
 Delay=
 HEX=1
 Enter=0
 [23]
-Cho=1
+Cho=0
 CMD=
 Delay=
 HEX=1
 Enter=0
 [24]
-Cho=1
+Cho=0
 CMD=
 Delay=
 HEX=1
 Enter=0
 [25]
-Cho=1
+Cho=0
 CMD=
 Delay=
 HEX=1
 Enter=0
 [26]
-Cho=1
+Cho=0
 CMD=
 Delay=
 HEX=1
 Enter=0
 [27]
-Cho=1
+Cho=0
 CMD=
 Delay=
 HEX=1
 Enter=0
 [28]
-Cho=1
+Cho=0
 CMD=
 Delay=
 HEX=1
 Enter=0
 [29]
-Cho=1
+Cho=0
 CMD=
 Delay=
 HEX=1
