fsk_distance_measure: update algorithm, sync to 2271246

--- a/embedded/fsk_distance_measure/MDK/distance_measure.uvprojx
+++ b/embedded/fsk_distance_measure/MDK/distance_measure.uvprojx
@@ -624,11 +624,6 @@
           <GroupName>distance_measure</GroupName>
           <Files>
             <File>
-              <FileName>alphabeta_filter.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\app\distance_measure\src\alphabeta_filter.c</FilePath>
-            </File>
-            <File>
               <FileName>apfft.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\app\distance_measure\src\apfft.c</FilePath>
@@ -642,11 +637,6 @@
               <FileName>corrcoef.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\app\distance_measure\src\corrcoef.c</FilePath>
-            </File>
-            <File>
-              <FileName>distance_compensation.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\app\distance_measure\src\distance_compensation.c</FilePath>
             </File>
             <File>
               <FileName>distance_measure.c</FileName>
@@ -679,9 +669,14 @@
               <FilePath>..\app\distance_measure\src\micromotion_detection.c</FilePath>
             </File>
             <File>
-              <FileName>vd_calculation.c</FileName>
+              <FileName>alpha_filter.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\app\distance_measure\src\vd_calculation.c</FilePath>
+              <FilePath>..\app\distance_measure\src\alpha_filter.c</FilePath>
+            </File>
+            <File>
+              <FileName>pd_calculation.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\app\distance_measure\src\pd_calculation.c</FilePath>
             </File>
           </Files>
         </Group>
